--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -6,7 +6,7 @@ header {
   padding: 1rem;
   border: 4px solid hsla(0, 0%, 100%, 0.25);
   background-color: hsla(0, 0%, 100%, 0.5);
-  background-image: url("images/clouds3.svg");
+  background-image: url("/images/clouds3.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
