--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -7,18 +7,15 @@
 }
 
 html {
-  font-family: "Nunito Sans", system-ui, sans-serif;
-  color: hsl(0, 0%, 10%);
+  font-family: "Nunito Sans", sans-serif;
 }
 
 body {
+  min-width: 320px;
   min-height: 100vh;
-  display: grid;
-  justify-content: center;
-  align-content: start;
-  padding: 2rem;
+  padding: 1rem;
   background-image: linear-gradient(
-    135deg,
+    45deg,
     hsl(188deg 100% 92%) 0%,
     hsl(189deg 100% 87%) 21%,
     hsl(190deg 100% 82%) 30%,
@@ -32,54 +29,92 @@ body {
   );
 }
 
+#root {
+  margin: 0 auto;
+  max-width: 700px;
+  display: grid;
+  row-gap: 1rem;
+}
+
 header {
   display: flex;
   gap: 0.5rem;
-  padding: 1rem 2rem;
-  background-color: hsla(0, 0%, 100%, 0.7);
-  box-shadow: 0 0 3px 2px hsla(199, 100%, 44%, 0.75);
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  border: 4px solid hsla(0, 0%, 100%, 0.25);
+  background-color: hsla(0, 0%, 100%, 0.5);
+  background-image: url("/images/clouds3.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+header img {
+  filter: drop-shadow(2px 2px 4px black);
+  transition: transform 1s;
+  cursor: pointer;
+}
+
+header img:hover {
+  transform: rotate(360deg);
 }
 
 header h1 {
-  font-size: 26px;
+  font-size: 2rem;
+  font-weight: 800;
+  color: white;
+  text-shadow: 0px 0px 1px black;
+  filter: drop-shadow(2px 2px 4px black);
 }
 
 main {
-  padding: 1rem 2rem;
+  display: grid;
+  row-gap: 0.5rem;
+  padding: 0.5rem;
   background-color: hsla(0, 0%, 100%, 0.5);
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  box-shadow: 0 0 3px 2px hsla(199, 100%, 44%, 0.75);
+  border: 1px solid hsla(0, 0%, 100%, 0.75);
 }
 
-main section {
+main > div {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
-main section h2 {
-  font-size: 22px;
-  border-bottom: 1px solid hsla(199, 100%, 44%, 0.5);
+main > div > img {
+  height: 2rem;
 }
 
-main section ul {
-  padding-top: 1rem;
-  list-style-position: inside;
-  list-style-type: square;
+main > div > h2 {
+  font-size: 1.2rem;
+  font-weight: 800;
 }
 
-main section ul li {
-  padding: 0.5rem 0;
+ul {
+  padding-left: 1.5rem;
+  list-style: square;
 }
 
-main section ul li a {
+li {
+  padding: 0.25rem 0;
+}
+
+a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
-  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
 }
 
-main section ul li a:hover {
-  text-decoration: underline;
-  color: hsl(199deg 100% 44%);
+a:hover {
+  color: hsl(195, 100%, 30%);
+}
+
+iframe {
+  width: 100%;
+  min-height: 300px;
+  border: 1px solid hsla(0, 0%, 100%, 0.75);
+  background-color: hsla(0, 0%, 100%, 0.5);
 }
