--- a/frontend/src/components/CourseworkCard.css
+++ b/frontend/src/components/CourseworkCard.css
@@ -1,15 +1,7 @@
 .coursework-card {
-  display: grid;
-  row-gap: 0.5rem;
   padding: 0.5rem;
   background-color: hsla(0, 0%, 100%, 0.5);
   border: 1px solid hsla(0, 0%, 100%, 0.75);
-}
-
-.coursework-card-id-container {
-  display: flex;
-  gap: 1rem;
-  font-size: 0.75rem;
 }
 
 .coursework-card-description {
@@ -21,6 +13,7 @@
   align-items: center;
   column-gap: 0.5rem;
   row-gap: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .coursework-card-image {
@@ -42,7 +35,7 @@
 
 .coursework-card-trainees-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
   row-gap: 0.5rem;
 }
 
