--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,8 +1,8 @@
 header {
   display: flex;
-  gap: 0.5rem;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
   padding: 1rem;
   border: 4px solid hsla(0, 0%, 100%, 0.25);
   background-color: hsla(0, 0%, 100%, 0.5);
@@ -10,22 +10,34 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  margin-bottom: 1rem;
 }
 
 header img {
   filter: drop-shadow(2px 2px 4px black);
-  transition: transform 1s;
+  animation: spin 10s linear infinite;
   cursor: pointer;
 }
 
-header img:hover {
-  transform: rotate(360deg);
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 header h1 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-weight: 800;
   color: white;
   text-shadow: 0px 0px 1px black;
   filter: drop-shadow(2px 2px 4px black);
+}
+
+@media screen and (min-width: 500px) {
+  header h1 {
+    font-size: 2rem;
+  }
 }
