--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -45,7 +45,7 @@ header {
   padding: 1rem;
   border: 4px solid hsla(0, 0%, 100%, 0.25);
   background-color: hsla(0, 0%, 100%, 0.5);
-  background-image: url("/images/clouds3.svg");
+  background-image: url("./images/clouds3.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -82,17 +82,22 @@ main {
   border: 1px solid hsla(0, 0%, 100%, 0.75);
 }
 
-main > div {
+.routes-section {
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.routes-header {
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
 
-main > div > img {
+.routes-image {
   height: 2rem;
 }
 
-main > div > h2 {
+.routes-title {
   font-size: 1.2rem;
   font-weight: 800;
 }
@@ -118,9 +123,28 @@ a:hover {
   color: hsl(195, 100%, 30%);
 }
 
-iframe {
+.response-section {
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.response-title {
+  font-size: 1.2rem;
+  font-weight: 800;
+}
+
+#response-container {
   width: 100%;
   min-height: 200px;
   border: 1px solid hsla(0, 0%, 100%, 0.75);
   background-color: hsla(0, 0%, 100%, 0.5);
+  padding: 0.5rem;
+}
+
+.response .response-success {
+  color: darkblue;
+}
+
+.response-error {
+  color: red;
 }
